--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/croppie": "^2.6.4",
+    "@types/file-saver": "^2.0.7",
     "@zumer/snapdom": "^1.9.9",
+    "croppie": "^2.6.5",
     "file-saver": "^2.0.5",
     "ssam": "^0.21.1",
     "three": "^0.177.0"
