--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@types/croppie": "^2.6.4",
     "@types/file-saver": "^2.0.7",
-    "@zumer/snapdom": "^1.9.9",
+    "@zumer/snapdom": "^1.9.10-dev.0",
     "croppie": "^2.6.5",
     "file-saver": "^2.0.5",
     "ssam": "^0.21.1",
