--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -17,10 +17,10 @@ jobs:
           node-version: '24.x'
 
       - run: npm ci
-      - run: npm run build
+      - run: npm run build --base=/glassgen
 
   deploy:
-    if: github.ref == 'refs/heads/main'
+    #if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     needs: build
     steps:
@@ -29,7 +29,7 @@ jobs:
         with:
           switches: -av --delete
           path: dist/
-          remote_path: /srv/website/2025/generator
+          remote_path: /srv/website/2025/glassgen
           remote_host: srv2.mrmcd.net
           remote_user: website
           remote_key: ${{ secrets.SSH_KEY }}
